--- a/Canvas画布.html
+++ b/Canvas画布.html
@@ -94,16 +94,16 @@
                 <h3>颜色</h3>
                 <hr>
                 <ul id="color">
-                    <li id="red" onclick="setColor(0)"></li>
-                    <li id="green" onclick="setColor(1)"></li>
-                    <li id="blue" onclick="setColor(2)"></li>
-                    <li id="yellow" onclick="setColor(3)"></li>
-                    <li id="white" onclick="setColor(4)"></li>
-                    <li id="black" onclick="setColor(5)"></li>
-                    <li id="pink" onclick="setColor(6)"></li>
-                    <li id="purple" onclick="setColor(7)"></li>
-                    <li id="cyan" onclick="setColor(8)"></li>
-                    <li id="orange" onclick="setColor(9)"></li>
+                    <li id="red" onclick="setColor(this,0)"></li>
+                    <li id="green" onclick="setColor(this,1)"></li>
+                    <li id="blue" onclick="setColor(this,2)"></li>
+                    <li id="yellow" onclick="setColor(this,3)"></li>
+                    <li id="white" onclick="setColor(this,4)"></li>
+                    <li id="black" onclick="setColor(this,5)"></li>
+                    <li id="pink" onclick="setColor(this,6)"></li>
+                    <li id="purple" onclick="setColor(this,7)"></li>
+                    <li id="cyan" onclick="setColor(this,8)"></li>
+                    <li id="orange" onclick="setColor(this,9)"></li>
                 </ul>
             </li>
         </ul>
