--- a/Canvas画布.html
+++ b/Canvas画布.html
@@ -20,7 +20,7 @@
                         <button id="saveimg">保存图片</button>
                     </li>
                     <li>
-                        <button id="claerimg">清除画板</button>
+                        <button id="clearimg">清除画板</button>
                     </li>
                 </ul>
             </li>
