第五次提交
所有按钮都已完成，此项目暂时结束。

--- a/Canvas画布.html
+++ b/Canvas画布.html
@@ -1,3 +1,10 @@
+<!--                             
+ - 文件名称：cancas画布.html
+ - 作者：niudiewei
+ - 完成日期：2018年9月4日
+ - 版本号：v1.0
+/ -->
+
 <!DOCTYPE html>
 <html>
 
